--- a/src/style.css
+++ b/src/style.css
@@ -22,10 +22,14 @@ body {
   background-color: #f4f5f0;
 }
 
+.ocult {
+  display: none;
+}
+
 #title-container {
   width: 100%;
   height: 40px;
-  border-bottom: 2px solid rgba(128, 128, 128, 0.352);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.352);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -40,12 +44,33 @@ body {
   cursor: pointer;
 }
 
-#add-task {
+#task-form {
+  display: flex;
   height: 40px;
   width: 100%;
   border: none;
-  border-bottom: 2px solid rgba(128, 128, 128, 0.352);
+  justify-content: space-between;
+}
+
+.submit-button,
+#add-task {
+  border: none;
+  background-color: transparent;
+}
+
+#add-task {
   padding-left: 12px;
+  width: 95%;
+}
+
+.submit-button {
+  margin-right: 12px;
+  margin-left: 12px;
+  cursor: pointer;
+}
+
+#add-task::placeholder {
+  font-style: italic;
 }
 
 .list-section {
@@ -71,6 +96,10 @@ body {
   justify-content: space-between;
 }
 
+.task.select {
+  background-color: rgba(255, 255, 0, 0.427);
+}
+
 .task:last-child {
   border: none;
 }
@@ -86,13 +115,28 @@ body {
   cursor: move;
 }
 
+.fa-ellipsis-vertical.ocult {
+  display: none;
+}
+
+.fa-trash-can {
+  position: relative;
+  margin-right: 12px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.fa-trash-can:hover {
+  transform: scale(1.2);
+}
+
 #clear-btn {
   height: 50px;
   width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid rgba(128, 128, 128, 0.352);
+  border: 1px solid rgba(128, 128, 128, 0.352);
   background-color: rgba(230, 226, 226, 0.283);
   cursor: pointer;
 }
