--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,11 @@ body {
   display: none;
 }
 
+.checked {
+  text-decoration: line-through;
+  color: gray;
+}
+
 #title-container {
   width: 100%;
   height: 40px;
@@ -91,9 +96,10 @@ body {
   width: 100%;
   display: flex;
   text-decoration: none;
-  border-bottom: 2px solid rgba(128, 128, 128, 0.352);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.352);
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .task.select {
@@ -104,15 +110,26 @@ body {
   border: none;
 }
 
+.task:first-child {
+  border-top: 1px solid rgba(128, 128, 128, 0.352);
+}
+
 .checkbox {
   margin-left: 12px;
   margin-right: 12px;
+  cursor: pointer;
 }
 
 .fa-ellipsis-vertical {
   position: relative;
   margin-right: 12px;
   cursor: move;
+  color: gray;
+}
+
+.fa-ellipsis-vertical:hover {
+  color: black;
+  transform: scale(1.2);
 }
 
 .fa-ellipsis-vertical.ocult {
