--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ body {
 
 .fa-circle-dot {
   color: var(--purple);
-  font-size: 0.3rem;
+  font-size: 0.6rem;
 }
 
 .ocult {
@@ -132,14 +132,18 @@ body {
 }
 
 .task {
-  height: 40px;
+  height: 50px;
   width: 100%;
   display: flex;
   text-decoration: none;
   border-bottom: 1px solid var(--purple);
   align-items: center;
   justify-content: space-between;
-  cursor: pointer;
+  cursor: move;
+}
+
+.task.margin {
+  background-color: rgba(64, 224, 208, 0.144);
 }
 
 input:checked + label {
@@ -151,6 +155,10 @@ input:checked + label {
 .task.select {
   background-color: var(--soft-purple);
   border: 1px solid var(--purple);
+}
+
+.task.changed {
+  background-color: rgba(64, 224, 208, 0.144);
 }
 
 .task:last-child {
@@ -181,7 +189,7 @@ input[type=checkbox] {
 
 .fa-ellipsis-vertical {
   position: relative;
-  cursor: move;
+  cursor: pointer;
   margin-right: 12px;
   color: var(--purple);
   transition: transform 0.5s ease-in-out;
@@ -211,6 +219,7 @@ input[type=checkbox] {
   margin-right: 12px;
   margin-left: 12px;
   transition: transform 0.5s ease-in-out;
+  cursor: pointer;
 }
 
 .fa-pencil:hover {
