--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,10 @@
 }
 
 :root {
-  --purple: rgb(140, 53, 115);
-  --soft-purple: rgba(140, 53, 115, 0.183);
+  --wine: rgb(159, 42, 61);
+  --soft-wine: rgba(159, 42, 62, 0.226);
+  --parrot: #e0989940;
+  --medium: #b4353527;
 }
 
 /******* Main section *********/
@@ -26,7 +28,7 @@ body {
   height: 100vh;
   width: 100%;
   flex-direction: column-reverse;
-  background-color: var(--soft-purple);
+  background-color: #d2c6c7be;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -39,7 +41,7 @@ body {
 }
 
 .fa-circle-dot {
-  color: var(--purple);
+  color: var(--wine);
   font-size: 0.6rem;
 }
 
@@ -55,15 +57,16 @@ body {
 #title-container {
   width: 100%;
   height: 40px;
-  border-bottom: 1px solid var(--purple);
+  border-bottom: 1px solid var(--wine);
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-family: 'Oswald', sans-serif;
-  color: var(--purple);
+  color: var(--wine);
   font-size: 1.3rem;
   padding-top: 12px;
   padding-bottom: 12px;
+  background-color: var(--soft-wine);
 }
 
 .list-title {
@@ -73,12 +76,12 @@ body {
 .fa-arrows-rotate {
   margin-right: 12px;
   cursor: pointer;
-  color: var(--purple);
+  color: var(--wine);
 }
 
 .fa-arrows-rotate:hover {
   transform: scale(1.1);
-  color: var(--purple);
+  color: var(--wine);
 }
 
 #task-form {
@@ -110,8 +113,8 @@ body {
 
 .submit-button:hover {
   font-size: 1.1rem;
-  background-color: var(--soft-purple);
-  border: 1px solid var(--purple);
+  background-color: var(--soft-wine);
+  border: 1px solid var(--wine);
 }
 
 #add-task::placeholder {
@@ -121,7 +124,7 @@ body {
 .list-section {
   height: auto;
   width: 30%;
-  border: 1px solid var(--purple);
+  border: 2px solid var(--wine);
   border-bottom: 1px solid transparent;
   background-color: white;
 }
@@ -136,29 +139,31 @@ body {
   width: 100%;
   display: flex;
   text-decoration: none;
-  border-bottom: 1px solid var(--purple);
+  border-bottom: 1px solid var(--wine);
   align-items: center;
   justify-content: space-between;
   cursor: move;
 }
 
 .task.margin {
-  background-color: rgba(64, 224, 208, 0.144);
+  background-color: var(--medium);
 }
 
 input:checked + label {
   text-decoration: line-through;
-  text-decoration-color: var(--purple);
-  color: var(--purple);
+  text-decoration-color: var(--wine);
+  color: var(--wine);
 }
 
 .task.select {
-  background-color: var(--soft-purple);
-  border: 1px solid var(--purple);
+  background-color: var(--parrot);
+  border: 1px solid var(--wine);
+  border-bottom: 2px solid var(--wine);
+  border-top: 1px solid var(--wine);
 }
 
 .task.changed {
-  background-color: rgba(64, 224, 208, 0.144);
+  background-color: var(--medium);
 }
 
 .task:last-child {
@@ -166,19 +171,20 @@ input:checked + label {
 }
 
 .task:first-child {
-  border-top: 1px solid var(--purple);
+  border-top: 1px solid var(--wine);
 }
 
 .task:last-child.select {
-  border: 1px solid var(--purple);
+  border: 1px solid var(--wine);
+  border-bottom: 2px solid var(--wine);
 }
 
 .task:first-child.select {
-  border-top: 1px solid var(--purple);
+  border-top: 2px solid var(--wine);
 }
 
 input[type=checkbox] {
-  accent-color: var(--soft-purple);
+  accent-color: var(--soft-wine);
 }
 
 .checkbox {
@@ -191,7 +197,7 @@ input[type=checkbox] {
   position: relative;
   cursor: pointer;
   margin-right: 12px;
-  color: var(--purple);
+  color: var(--wine);
   transition: transform 0.5s ease-in-out;
 }
 
@@ -236,19 +242,19 @@ input[type=checkbox] {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--purple);
-  background-color: rgba(230, 226, 226, 0.283);
+  border: 2px solid var(--wine);
+  background-color: var(--soft-wine);
   cursor: pointer;
   transition: all 0.5s ease-in-out;
   font-family: 'Oswald', sans-serif;
-  color: var(--purple);
+  color: var(--wine);
 }
 
 #clear-btn:hover {
   font-size: 1.05rem;
   font-weight: 400;
-  background-color: var(--soft-purple);
-  color: black;
+  background-color: var(--wine);
+  color: white;
 }
 
 /* Edit section */
